# VisionForecaster

./: LICENSE  README.md  best_model.pt  extract_distance_matrices.py  main.py  model_fold_1.pth  model_interpretability.py  parameters.py  plot_train_val_res.py  preprocessing.py  pth1_test_transformer.err  pth1_test_transformer.out  pth5_test_transformer.out  pyproject.toml  scratch.py  script.pbs  test.pbs  testscript.pbs  training_and_validation_functions.py  transformer (old, no SPT, LSA).py  transformer.err  transformer.out  transformer.py  w180_results.out  w35_results.out  w70_results.out
doc/: model_architecture.html
docs/: index.html
results_and_plots/w35_180_each_model_fold_pth/w35/: transformer.out
results_and_plots/w35_180_train_val_results/: w120_results.out
test/: scratch.py
test/interp_outputs/: pth1_test_transformer.out  pth2_test_transformer.out  pth3_test_transformer.out  transformer.err  transformer.out
test/interp_outputs/most_recent_trial/: transformer.err  transformer.out
test/interp_outputs/pth_1_data_driven_gate/: pth1_test_transformer.out
test/interp_outputs/pth_2_data_driven_gate/: pth2_test_transformer.out
test/interp_outputs/pth_3_data_driven_gate/: pth3_test_transformer.out
test/interp_outputs/pth_4_data_driven_gate/: pth4_test_transformer.out
