[project]
name = "transformer"
version = "0.1.0"
description = "Transformer model for TDA distance matrices forecasting"
authors = [
    {name = "PythoneerKang",email = "zt.kang@gmail.com"}
]
requires-python = ">=3.13,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "einops (>=0.8.2,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu-src"}
torchvision = {source = "pytorch-gpu-src"}
